# qa_guru_python_4_19

./: .env  conftest.py  pyproject.toml
schemas/: reqres.py
tests/: test_ui.py  tests_reqres_api.py
utils/: helper.py
