[tool.poetry]
name = "qa-guru-python-19"
version = "0.1.0"
description = ""
authors = ["Denis Denisov <denisofflive@mail.ru>"]
readme = "README.md"
packages = [{ include = "qa-guru-python-19" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.29.0"
pytest = "^7.3.1"
allure-pytest = "^2.13.2"
curlify = "^2.2.1"
voluptuous = "^0.13.1"
pytest-voluptuous = "^1.2.0"
selene = "2.0.0rc2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
log_cli = 1
log_level = "INFO"
addopts = "-s --alluredir=allure-results"